[package]
name = "p3-mersenne-31"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
nightly-features = []

[dependencies]
itertools = "0.13.0"
p3-dft = { path = "../dft" }
p3-field = { path = "../field" }
p3-matrix = { path = "../matrix" }
p3-mds = { path = "../mds" }
p3-maybe-rayon = { path = "../maybe-rayon" }
p3-poseidon2 = { path = "../poseidon2" }
p3-symmetric = { path = "../symmetric" }
p3-util = { path = "../util" }
p3-uni-stark = { path = "../uni-stark"}
p3-fri = {path = "../fri"}
p3-commit = {path = "../commit"}
p3-circle = {path = "../circle"}
p3-challenger = {path = "../challenger"}
p3-merkle-tree = {path = "../merkle-tree"}
p3-air = {path = "../air"}
num-bigint = { version = "0.4.3", default-features = false }
rand = "0.8.5"
serde = { version = "1.0", default-features = false, features = ["derive"] }
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
tracing = "0.1.40"
num-traits = "0.2.17"

[dev-dependencies]
criterion = "0.5"
p3-field-testing = { path = "../field-testing" }
rand_chacha = "0.3.1"
rand_xoshiro = "0.6.0"

[[bench]]
name = "bench_field"
harness = false

[[bench]]
name = "extension"
harness = false
